create github pages

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/d">best website software</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-after-navbar" id="header1-2" data-rv-view="150" style="background-image: url(assets/images/standard-bank-hartley-480x360.jpg);">
+<section class="engine"><a href="https://mobirise.ws/j">design your own website</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-after-navbar" id="header1-2" data-rv-view="150" style="background-image: url(assets/images/standard-bank-hartley-480x360.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(124, 112, 107);"></div>
 
@@ -344,7 +344,7 @@
 Estaremos en contacto en la brevedad posible.</div>
                                     </div>
                                     <form action="https://mobirise.com/" method="post" data-form-title="DEJAR UN MENSAJE">
-                                        <input type="hidden" value="x12wp4JPbZi0yg0Jncr+STysGdeyjfGbliPAIXGvRtSmFWedWnN4qOB6vYVUMHdks0oCsKvnLWDTtFXilW81nwQXykg5/RZ97yuoi9B4vUmdeUjp+PGesp6eVngFOx7Y" data-form-email="true">
+                                        <input type="hidden" value="OUC15Ssicq4DselKlUdglN9dSIS1Jjtqg/4+QxPZukKZ8pDwlfoRYVFWqN2hU+ixewsGl2wOKhPMGLWmeqqjpdcy5ds3xsDUhc0GfvZCxLXKI9W+MRQxACmORxiGfn0k" data-form-email="true">
     
                                             <div class="col-xs-6">
                                                  <input type="text" class="form-control" name="name" required="" data-form-field="Name" placeholder="Nombre*">
@@ -379,23 +379,6 @@ Estaremos en contacto en la brevedad posible.</div>
         </div>
     </div>
 
-</section>
-
-<section class="mbr-section mbr-section__container" id="image2-d" data-rv-view="251" style="background-color: rgb(255, 255, 255); padding-top: 80px; padding-bottom: 80px;">
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-12">
-                <figure class="mbr-figure">
-                    <div><iframe class="mbr-embedded-video" src="file:///C:/PortalalPasado/Videos/Anotacion.mp4" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
-
-                    <figcaption class="mbr-figure-caption mbr-figure-caption-over">
-                        <div class="container">Create awesome mobile-friendly websites. No coding and free.</div>
-                    </figcaption>
-
-                </figure>
-            </div>
-        </div>
-    </div>
 </section>
 
 
